@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-DynamicPrereqs-Meta
 
 {{$NEXT}}
+          - Add [DynamicPrereqs::ModuleBuild] plugin
           - Allow empty conditions
           - Actually add the necessary planner file in [DynamicPrereqs::DistBuild]
 
